--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,15 @@
     "@cartridge/connector": "^0.5.1",
     "@starknet-react/chains": "^3.1.0",
     "@starknet-react/core": "^3.6.2",
+    "@tsparticles/engine": "^3.7.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.7.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "starknet": "^6.11.0"
+    "react-icons": "^5.3.0",
+    "react-tsparticles": "^2.12.2",
+    "starknet": "^6.11.0",
+    "tsparticles": "^3.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
