--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@tsparticles/slim": "^3.7.1",
     "framer-motion": "^11.12.0",
     "react": "^18.3.1",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-tsparticles": "^2.12.2",
