--- a/cairo/Scarb.toml
+++ b/cairo/Scarb.toml
@@ -7,6 +7,7 @@ edition = "2024_07"
 
 [dependencies]
 starknet = "2.8.5"
+openzeppelin_token = { git = "https://github.com/OpenZeppelin/cairo-contracts.git", tag = "v0.20.0-rc.0" }
 
 [dev-dependencies]
 snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry", tag = "v0.34.0" }
